<resources>
    <string name="app_name">Platzigram</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="donthave_account">¿No tienes cuenta?</string>
    <string name="create_here">, crea una aquí</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_confirma_password">Confirma Contraseña</string>
    <string name="text_button_unete">Únete</string>
    <string name="text_toolbar_createaccount">Crear Cuenta</string>
    <string name="dummy_username_cardview">Enzo Ruiz Pelaez</string>
    <string name="dummy_firstword_cardview">Hace</string>
    <string name="dummy_time_cardview">4 días</string>
    <string name="dummy_likenumber_cardview">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_secondword">Me gusta</string>
    <string name="dummy_firstword">10</string>
    <string name="dummy_title_detail">Titulo de la imagen</string>
    <string name="dummy_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed justo eros, dictum non felis a, eleifend eleifend nulla. Ut ultrices fringilla dui ut congue. Mauris semper laoreet urna convallis sollicitudin. Curabitur nec blandit arcu, ac lacinia leo. Donec eros ligula, lobortis eget tincidunt ac, tempus ultrices mauris. Mauris maximus ligula et posuere tempus. Nunc interdum a augue sed aliquet. Praesent convallis, augue vel molestie ultrices, nunc velit aliquet neque, viverra vulputate justo nulla a dolor. Sed dapibus urna ac facilisis euismod. Proin porta rhoncus gravida. Fusce ultrices scelerisque tortor in congue. Duis pulvinar ultricies eros, quis vestibulum odio sollicitudin id. Morbi ullamcorper dolor erat, at dictum massa facilisis id. Nullam vel metus vitae ante consectetur hendrerit.</string>

    <string name="facebook_app_id">241844072981940</string>

</resources>
